src/objects/Quote__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Select the Account for that Quote</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Quote</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Annual_Grand_Total__c</fullName>
        <label>Annual Grand Total</label>
        <summarizedField>Quote_Product__c.Roll_Up_Annual_Row_Total__c</summarizedField>
        <summaryForeignKey>Quote_Product__c.Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Annual_Net_Total__c</fullName>
        <label>Annual Net Total</label>
        <summarizedField>Quote_Product__c.Roll_Up_Annual_Net_Total__c</summarizedField>
        <summaryForeignKey>Quote_Product__c.Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Annual_VAT_Total__c</fullName>
        <label>Annual VAT Total</label>
        <summarizedField>Quote_Product__c.Roll_Up_Annual_VAT__c</summarizedField>
        <summaryForeignKey>Quote_Product__c.Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Approval_URL__c</fullName>
        <formula>&quot;https://videotelmarineinternational.my.salesforce.com/&quot;&amp; Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Status__c</fullName>
        <label>Approved Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It is loop up to Contact for Billing Contact</description>
        <label>Billing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Quotes_InvoiceIT</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contracted_MRR__c</fullName>
        <description>TCV / Terms(In Months)</description>
        <label>Contracted MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Create_Automatic_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this is true then it will create the Order from the Quote trigger.</description>
        <label>Create Automatic Order?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CurrencyL__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Based on the Currency the Products will be generated</description>
        <label>Currency</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipLabel>Quote</relationshipLabel>
        <relationshipName>Quote</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Discount_Code__c</fullName>
        <description>The Discount Code will be applied to all the charges</description>
        <label>Discount Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Percent__c</fullName>
        <description>The Discount Percent will be applied to all the charges</description>
        <label>Discount Percent</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount_Value__c</fullName>
        <description>Discount offered on this Quote</description>
        <inlineHelpText>Discount offered on this Quote</inlineHelpText>
        <label>Discount Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If it is checked that means an Email has been sent to the customer.</description>
        <label>Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IITIntended_Use__c</fullName>
        <description>Select where the Titles will be used, which will drive VAT</description>
        <inlineHelpText>Select where the Titles will be used, which will drive VAT</inlineHelpText>
        <label>Intended Use</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Intended_Use</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal_Entity__c</fullName>
        <label>Legal Entity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Legal_Entity</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Net_Total__c</fullName>
        <description>Subtotal - Discount Value</description>
        <inlineHelpText>Subtotal - Discount Value</inlineHelpText>
        <label>Net Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Terms__c</fullName>
        <description>Leave this blank for &quot;Evergreen Subscriptions&quot; i.e., those that don&apos;t expire</description>
        <label>Terms (Months)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Override_Vat_Tax__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If user enable this checkbox, it will not populate VAT/Tax</description>
        <label>Override Vat/Tax ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Partner_Agent_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Select the Partner who places this Quote on behalf of the Client</description>
        <inlineHelpText>Select the Partner who places this Quote on behalf of the Client</inlineHelpText>
        <label>Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Platform_or_Vessel_Detail__c</fullName>
        <label>Platform or Vessel Detail</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Platform_Vessel_Detail</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proposed_End_Date__c</fullName>
        <description>End Date proposed by the User</description>
        <inlineHelpText>This value will auto populate the Order Service End Date and override other settings</inlineHelpText>
        <label>Proposed End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposed_Start_Date__c</fullName>
        <description>Starting Date proposed by the user</description>
        <inlineHelpText>This value will auto populate the Order Service Start Date and override other settings</inlineHelpText>
        <label>Proposed Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quote_Number__c</fullName>
        <label>Quote Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Type__c</fullName>
        <label>Quote Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rental</fullName>
                </value>
                <value>
                    <fullName>Sale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It tells the Parent Quote from which the Quote is cloned</description>
        <label>Parent Quote</label>
        <referenceTo>Quote__c</referenceTo>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recalculate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Calculates the Total Contract Value</description>
        <label>Recalculate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewed_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewed From</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Roll_Up_Year_2_Net_total__c</fullName>
        <label>Roll Up Year 2 Net total</label>
        <summarizedField>Quote_Product__c.Roll_up_Year_2_Net_total__c</summarizedField>
        <summaryForeignKey>Quote_Product__c.Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Roll_Up_Year_3_Net_total__c</fullName>
        <label>Roll Up Year 3 Net total</label>
        <summarizedField>Quote_Product__c.Roll_up_Year_3_Net_total__c</summarizedField>
        <summaryForeignKey>Quote_Product__c.Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Roll_Up_Year_4_Net_total__c</fullName>
        <label>Roll Up Year 4 Net total</label>
        <summarizedField>Quote_Product__c.Roll_up_Year_4_Net_total__c</summarizedField>
        <summaryForeignKey>Quote_Product__c.Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Shipping_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipping Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>KV Platform</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Shipping_Account_Quote</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipping_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Delivers the product to the customer</description>
        <label>Primary(Shipping) Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <infoMessage>You can pick a contact that belongs to the selected Account or Partner. This can be overridden.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Quote1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Service Activation Date</description>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Based on the status user will check the Quote is Active/Converted or not</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Converted</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_total__c</fullName>
        <description>Quantity * Unit Price</description>
        <inlineHelpText>Quantity * Unit Price</inlineHelpText>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sync_Quote__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the value is true then it copies the products from Quote to an Opportunity.</description>
        <inlineHelpText>When checked, the products from the Quote record will be synchronized to the related Opportunity record.</inlineHelpText>
        <label>Sync Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <description>Populate the Tax for the particular charges related to Quote</description>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Todays_MRR__c</fullName>
        <label>Obsolete_Today&apos;s MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalProfitPercent__c</fullName>
        <description>(Grand Total - Total Cost)
---------------------------------- x 100
Grand Total</description>
        <inlineHelpText>(Grand Total - Total Cost)
---------------------------------- x 100
Grand Total</inlineHelpText>
        <label>Total Profit Percent</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Contract_Value__c</fullName>
        <description>This field will auto populate based on Terms(Months) field</description>
        <label>Total Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <description>Quantity*Unit Cost</description>
        <label>Total Cost Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Profit_Percent__c</fullName>
        <label>Obsolete Total Profit Percent</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Profit__c</fullName>
        <description>Calculated based on the Grand Total</description>
        <label>Total Profit (Excl Tax/VAT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Quote_Products__c</fullName>
        <description>This field represents how many products involved for that Quote</description>
        <label>Total Quote Products</label>
        <summaryForeignKey>Quote_Product__c.Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <description>Subtotal - Discount + VAT + Tax</description>
        <inlineHelpText>Subtotal - Discount + VAT + Tax</inlineHelpText>
        <label>Grand Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VAT__c</fullName>
        <label>VAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Valid_To__c</fullName>
        <description>Service End Date</description>
        <label>Valid To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vat_Roll_Up__c</fullName>
        <label>Vat Roll Up</label>
        <summarizedField>Quote_Product__c.Vat_Roll_Up__c</summarizedField>
        <summaryForeignKey>Quote_Product__c.Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Wet_or_Dry_Cargo__c</fullName>
        <label>Wet or Dry Cargo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dry Cargo</fullName>
                </value>
                <value>
                    <fullName>Wet Cargo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Quote</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Quote Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quotes</pluralLabel>
    <recordTypes>
        <fullName>Approved</fullName>
        <active>true</active>
        <label>Approved</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pending_Approval_Rental</fullName>
        <active>true</active>
        <label>Pending Approval Rental</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Quote</fullName>
        <active>true</active>
        <label>Create Sales Quote</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>